<resources>
    <string name="app_name">Learn C</string>
    <string name="title_activity_basics">basics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="variable_text1">
        ভ্যারিয়েবল হলো তথ্য জমা রাখার পাত্র (container) বা স্টোরেজ এরিয়া।
স্টোরেজ এরিয়াকে নির্দেশ করার জন্য প্রত্যেকটি ভ্যারিয়েবলের একটি ইউনিক নাম দিতে হয় (identifier)।
মেমোরি লোকেশনকে নির্দেশ করার জন্য ভ্যারিয়েবল হলো একটি সাংকেতিক নাম।\n\nউদাহরণস্বরূপঃ
    </string>
    <string name="variableText2">
        এখানে age হলো একটি ইন্টিজার (integer) টাইপের ভ্যারিয়েবল এবং ইহাতে ভ্যালু রাখা হয়েছে (assign) করা হয়েছে 32।
ভ্যারিয়েবলের ভ্যালু পরিবর্তন হতে পারে বলেই এর নাম দেওয়া হয়েছে ভ্যারিয়েবল।
সি প্রোগ্রামিং এ ভ্যারিয়েবল ব্যবহার করার আগেই ভ্যারিয়েবলকে ডিক্লেয়ার (declare) করতে হয়।\n\nসি প্রোগ্রামিং এ ভ্যারিয়েবলের নাম দেয়ার কিছু নিয়মাবলি রয়েছেঃ
    </string>
    <string name="variableText3">
        একটি বৈধ ভ্যারিয়েবলের নামের মধ্যে শুধুমাত্র বর্ণমালা(বড় হাতের বর্ণ বা ছোট হাতের বর্ণ) , ডিজিট(digits) এবং আন্ডারস্কোর(_) থাকতে পারে।
    </string>
    <string name="variableText4">ভ্যারিয়েবলের নাম বর্ণ অথবা আন্ডারস্কোর দিয়ে শুরু হতে হবে। তবে আন্ডারস্কোর দিয়ে ভ্যারিয়েবলের নাম শুরু করাকে অনুৎসাহিত করা হয়।
		কারণ আন্ডারস্কোর দিয়ে শুরু হওয়া ভ্যারিয়েবলের নাম সিস্টেমের নামের সাথে সংঘর্ষ বেধে কিছু সমস্যা দেখা দিতে পারে।</string>
    <string name="variableText5">ভ্যারিয়েবলের নাম যেকনো দৈর্ঘ্যের হতে পারে। তবে কম্পাইলার প্রথম ৩১ বর্ণ কে ভ্যারিয়েবলের নাম হিসাবে বেছে নেয়।
		তাই একটি প্রোগ্রামে দুটি ভ্যারিয়েবলের প্রথম ৩১ বর্ণ আলাদা হতে হয়।</string>
    <string name="dataTypetex1">ডাটা টাইপ দ্বারা ভ্যারিয়েবলের মধ্যে সংরক্ষিত ডাটার টাইপ নির্ধারণ করা হয়।
সি প্রোগ্রামিং এ ডাটা টাইপ ভ্যারিয়েবল বা মেমোরি লোকেশন (location)-কে ব্যবহারের পূর্বে ডিক্লেয়ার করতে হয়।
একইভাবে ফাংশনকেও ব্যবহারের পূর্বেই ডিক্লেয়ার (declare) করতে হয়।\nডাটা টাইপ যুক্ত ভ্যারিয়েবল এবং ফাংশন ডিক্লেয়ারেশন দ্বারা সাধারণত ডাটার সাইজ এবং টাইপ নির্ধারণ করা হয়।
    \n\n*** C ডেটা টাইপ</string>
    <string name="pointer1">
        সি ল্যাঙ্গুয়েজের একটি বেশ শক্তিশালী ফিচার হল পয়েন্টার। পয়েন্টার দিয়ে ফাংশনের ভেতর থেকে ভ্যারিয়েবল বা অ্যারে পাল্টানো, মেমোরি অ্যালোকেশন সহ বিভিন্ন অ্যাডভান্সড কাজ করা যায়।\n
        আমরা এর আগে অ্যারের ব্যবহার দেখেছি।
        অ্যারের একটি বিষয় হল এটির সাইজ প্রথমেই বলে দিতে হয়, পয়েন্টার ব্যবহার করে আমরা চাইলে ডায়নামিক অ্যারে তৈরি করতে পারি যেটির সাইজ প্রোগ্রাম চলার সময়ে ঠিক হবে এবং সে অনুযায়ী মেমোরি অ্যালোকেটেড হবে।
        পয়েন্টার প্রোগ্রামিং এ দারুন একটি টুল।\n\n
        পয়েন্টার সম্পর্কে জানার আগে কিছু বেসিক জিনিস জানা যাক, যেগুলো বুঝতে কাজে দিবে।
    </string>
    <string name="pointer2">
        ভ্যারিয়েবল গুলো কিভাবে কম্পিউটার মেমরিতে/ র‍্যাম এ স্টোর হয়?
    </string>
    <string name="pointer3">
        র‍্যাম এর এক একটি সেল এক একটি বাইট। আর প্রত্যেকটা বাইট এর একটি করে এড্রেস রয়েছে। আর প্রতিটা বাইটে ৮টি করে বিট রয়েছে।

    </string>
    <string name="pointer4">
        \t#include &lt;stdio.h&gt;\n
int main()\n
{\n
\t\tint a =5;\n
\t\tprintf(\"Memory address of a is: %x\\n\",&amp;a);\n
\t\treturn 0;\n
}
    </string>
    <string name="pointer5">
        উপরের প্রোগ্রামটি রান করালে এমন কিছু দেখাবেঃ Memory address of variable a is: 2686732 ।
    এক কম্পিউটারে এক এক মান দেখাবে। এবং একবার এক এক ভ্যালু দেখাবে।
    কারণ যতবারই আমরা প্রোগ্রামটি রান করি, প্রতিবারই ভ্যারিয়েবলটির জন্য মেমরিতে একটা জায়গা বরাদ্ধ করা হয়। আর ঐ জায়গার এড্রেসটা প্রতিবারই পরিবর্তন হয়।
    </string>
    <string name="pointer6">
        মেমোরি এড্রেস সাধারণত হেক্সাডেসিমেল নাম্বার হয়ে থাকে।a এর এড্রেস প্রিন্ট করতে %x ব্যবহার করা হয়েছে,কারণ হেক্সাডেসিমেল সংখ্যা প্রিন্ট করার জন্য
format specifier হচ্ছে  %x।
    </string>
    <string name="pointer7">
        &amp;[ampersend] দিয়ে কোনো ভ্যারিয়েবলের এড্রেস বুঝায়।এজন্যই scanf দিয়ে কোনো ভ্যারিয়েবলের ভ্যালু ইনপুট নেয়ার সময় ভ্যারিয়েবল নামের আগে &amp;
লিখা হয়।
    </string>
    <string name="pointer8">
        পয়েন্টার হচ্ছে একটা ভ্যারিয়েবল যার ভ্যালু হচ্ছে আরেকটি ভ্যারিয়েবল এর মেমরি লোকেশন। পয়েন্টার একটা ডেটা,
    অ্যারে বা ভ্যারিয়েবল এর কম্পিউটার মেমরি লোকেশন রিপ্রেজেন্ট করে বা পয়েন্ট করে।\n\n
    অন্যান্য ভ্যারিয়েবল এর মত পয়েন্টার ভ্যারিয়েবল ব্যবহার করার আগে কম্পিউটার/ কম্পাইলারকে বলতে হবে এটা একটি পয়েন্টার ভ্যারিয়েবল।
    পয়েন্টার ভ্যারিয়েবল নিচের মত করে ডিক্লেয়ার করা হয়ঃ
    </string>
    <string name="pointer9">
    যেমন integer পয়েন্টারের জন্যঃ int *i;\n\n

asterisk [*] একটি ভ্যারিয়েবলের আগে ব্যবহার করে পয়েন্টার হিসেবে ডিক্লেয়ার করা হয়। যাকে indirection operator বা value-at-address operator বলা হয়।\n\n

এখন দেখা যাক কিভাবে কোডে পয়েন্টার ব্যবহার করতে হয়ঃ
    </string>
    <string name="pointer10">
    \t#include &lt;stdio.h&gt;\n
int main ()\n
{
\t\tint a = 5; /* variable declaration */\n
\t\tint *ip; /* pointer variable declaration */\n
\t\tip = &amp;a; /* store address of \"a\" in pointer variable*/\n
\t\tprintf(\"Address of a variable: %xn\", &amp;a );\n
\t\t/* address stored in pointer variable */\n
\t\tprintf(\"Address stored in ip variable: %xn\", ip );\n
\t\treturn 0;\n
}
    </string>
    <string name="pointer11">
    এখানে আমরা একটি ভ্যারিয়েবল a ডিক্লেয়ার করেছি। এরপর একটি পয়েন্টার ভ্যারিয়েবল ডিক্লেয়ার করেছি। তারপর পয়েন্টার ভ্যারিয়েবলে a এর মেমরি এড্রেস রেখেছি।
    তারপর &amp; অপারেটর দিয়ে a ভ্যারিয়েবল এর এড্রেস প্রিন্ট করে দেখলাম। এবং পয়েন্টার ভ্যারিয়েবল এর ভ্যালু প্রিন্ট করে দেখলাম। উভয় এর মান ই একই।\n\n
আবার * ব্যবহার করে পয়েন্টার ভ্যারিয়েবল দিয়ে ঐ এড্রেসে থাকা ভ্যারিয়েবলের ভ্যালু প্রিন্ট করা যায়।
    </string>
    <string name="pointer12">
    \t#include &lt;stdio.h&gt;\n
int main ()\n
{\n
\t\tint a = 5;\n
\t\tint *ip;\n
\t\tip = &amp;a;\n
    /* address stored in pointer variable */\n
\t\tprintf(\"Address stored in ip variable: %x\\n\", ip );\n
/* access the value using the pointer */\n
\t\tprintf(\"Value of *ip variable: %d\\n\", *ip );\n
\t\treturn 0;\n
}
    </string>
    <string name="pointer13">
    আমরা যখন প্রগ্রামটি রান করব, তখন ip যে ভ্যারিয়েবলটির এড্রেস শো করবে, তারপর a এর মান প্রিন্ট করবে।
    লক্ষকরি, যখন আমরা পয়েন্টার ভ্যারিয়েবল দিয়ে কোন ভ্যারিয়েবল এর এড্রেস বের করতে চাইবো, তখন শুধু পয়েন্টার ভ্যারিয়েবল লিখলেই হবে।
    কিন্তু যখন আমরা পয়েন্টার ভ্যারিয়েবল দিয়ে মূল ভ্যারিয়েবল এর ভ্যালু বের করতে চাইবো, তখন পয়েন্টার ভ্যারিয়েবল এর আগে * যোগ করতে হবে।
    </string>
    <string name="pointer14">
    এসাইন করার মত সঠিক এড্রেস যদি না থাকে সেক্ষেত্রে একটি পয়েন্টার ভ্যারিয়েবল এর একটি শূন্য মান নির্ধারণ সবসময় একটি ভাল অভ্যাস।\n এটি ভ্যারিয়েবল ডিক্লেয়ার
করার সময় সম্পন্ন করা হয়। একটি পয়েন্টার যার ভ্যালু শূন্য তাকে নাল পয়েন্টার বলা হয়।
    </string>
    <string name="pointer15">
    #include &lt;stdio.h&gt;\n

int main ()\n
{\n
\t\tint *ptr = NULL;\n

\t\tprintf(\"The value of ptr is : %x\\n\", ptr );\n

\t\treturn 0;\n
}
    </string>
    <string name="pointer16">
    আমরা যখন একটি ভ্যারিয়েবল ডিক্লেয়ার করার পর যখন প্রোগ্রামটি এক্সিকিউট/রান করি তখন কম্পিউটার ঐ ভ্যারিয়েবল এর জন্য কিছু মেমরি এলোকেট করে। কত বাইট মেমরি এলোকেট করবে, তা নির্ভর করে ঐ ভ্যারিয়েবল এর ডেটা টাইপ এবং কম্পাইলার এর উপর।\n\n

সাধারনত কম্পাইলার গুলো একটা int এর জন্য 4 byte মেমরি এলোকেট করে। তেমনি একটি char ভ্যারিয়েবলের জন্য 1 byte মেমরি এলোকেট করে। floating-point নাম্বার এর জন্য 4 byte মেমরি এলোকেট করে।\n\n

যেমন যখন কম্পিউটার দেখে এমন একটি ডিক্লারেশন int a; তখন এটি বুঝতে পারে এটি একটি ইন্টিজার ভ্যারিয়েবল এবং এর জন্য 4 বাইট মেমরি এলোকেট করা দরকার। তখন র‍্যাম এর খালি যায়গা থেকে এটি এই ইন্টিজারের জন্য 4 বাইট মেমরি এলোকেট করে।\n\n

আমরা সহজেই একটি ভ্যারিয়েবলের মেমরি লোকেশন বের করতে পারি, নিচের প্রোগ্রামটি দেখা যাকঃ
    </string>
    <string name="sttext1">
        সি প্রোগ্রামিং এ স্ট্রাকচার হলো ইউজার ডিফাইন্ড (user defined) ডেটা টাইপ। একটি একক নামের মধ্যে বিভিন্ন ডেটা টাইপ সম্বলিত ভ্যারিয়েবলের
সংগ্রহ-ই হলো স্ট্রাকচার (structure).\nউদাহরণস্বরূপঃ  একজন ব্যাক্তির(নাম, আইডি এবং ঠিকানা) তথ্য সংগ্রহ করে রাখা দরকার। ব্যাক্তির তথ্য সংগ্রহ করে রাখার জন্য খুব সহজেই
        বিভিন্ন ভ্যারিয়েবল ক্রিয়েট করা যেতে পারে। যেমন- name, idNo, address ইত্যাদি।\nযাইহোক, এখন যদি অনেক ব্যাক্তির তথ্য সংগ্রহ করে রাখতে হয়
        তাহলে প্রত্যেক ব্যাক্তির জন্য name1, idNo1, address1, name2, idNo2, address2 ইত্যাদি ভিন্ন ভিন্ন ভ্যারিয়েবল তৈরি করতে হবে।কিন্তু এভাবে
        কোড করলে কোড অনেক বড় হবে। এখন যদি আমরা সম্পর্কযুক্ত তথ্যগুলোকে একটি একক নাম Person এর মধ্যে সংগ্রহ করে রাখি এবং
        প্রত্যেক ব্যক্তির জন্য এটি ব্যবহার করি তাহলে কোডের কর্মদক্ষতাও (efficiency) বাড়বে।\nএকটি একক নাম (Person) এর মাধ্যমে সম্পর্কযুক্ত তথ্যসমূহের এই সংগ্রহ-ই হলো স্ট্রাকচার (structure)।
    </string>
    <string name="sttext2">
        সি স্ট্রাকচার ডেফিনিশনঃ
    </string>
    <string name="sttext3">
        struct কীওয়ার্ডের মাধ্যমে স্ট্রাকচার তৈরি করা হয়।\n\nস্ট্রাকচারের সিনট্যাক্স--&gt;
    </string>
    <string name="sttext4">
        struct structure_name\n{\n
        \t\tdata_type member1;\n
        \t\tdata_type member2;\n
        \t\t.\n\t\t\t.\n
        \t\tdata_type member;\n};
    </string>
    <string name="sttext5">
        নোটঃ  লাইনের শেষে সেমিকোলন(;) দিতে হবে।\n
    </string>
    <string name="sttext6">
        এখন আমরা উপরে দেয়া সিনট্যাক্স এর মত  person নামে একটি স্ট্রাকচার তৈরি করতে পারি। যেমনঃ
    </string>
    <string name="sttext7">
        struct person\n{\n
        \t\tchar name[50];\n
        \t\tint idNo;\n
        \t\tfloat address;\n};
    </string>
    <string name="sttext8">
        স্ট্রাকচার ভ্যারিয়েবল ডিক্লেয়ারেশনঃ
    </string>
    <string name="sttext9">
        যখন কোনো স্ট্রাকচার ডিফাইন্ড করা হয় তখন এটি ইউজার ডিফাইন্ড (user-defined) ডেটা টাইপ তৈরি করে। কিন্তু কোনো মেমোরি বা স্টোরেজ বরাদ্দ
        হয় না।\n\nউপরের person স্ট্রাকচারের জন্য নিচের মত ভ্যারিয়েবল ডিক্লেয়ার করা যেতে পারেঃ
    </string>
    <string name="sttext10">
        struct person\n{\n
        \t\tchar name[50];\n
        \t\tint idNo;\n
        \t\tfloat address;\n};\n\nint main()\n{\n
        \t\tstruct person person1;\n
        \t\treturn 0;\n
        }
    </string>
    <string name="sttext11">
        স্ট্রাকচারের মেম্বারকে এক্সেস করাঃ
    </string>
    <string name="sttext12">
        স্ট্রাকচারের মেম্বারকে এক্সেস করার জন্য দুই ধরণের অপারেটর রয়েছে।\nযেমনঃ\n1. Member operator(.)\n2. Structure pointer operator(-&gt;)\n\n
        স্ট্রাকচারের মেম্বার ভ্যারিয়েবলকে নিচের মত এক্সেস (access) করা যায়।
    </string>
    <string name="sttext13">
        \nযদি আমরা person1 ভ্যারিয়েবলের address কে এক্সেস করতে চাই তাহলে এটি নিচের মত এক্সেস করা যায়।
    </string>
    <string name="sttext14">
        স্ট্রাকচারের উদাহরণঃ
    </string>
    <string name="sttext15">
        নিচের প্রোগ্রামে ইউজার ফুট এবং ইঞ্চ ভ্যালু ইনপুট নিবে এবং ইনপুট প্রিন্ট হবে।
    </string>
    <string name="sttext16">
        #include&lt;stdio.h&gt;\nstruct Distance\n{\n
        \t\tint feet;\n
        \t\tfloat inch;\n};\n\nint main()\n{\n
        \t\tstruct Distance dist;\n
        \t\tprintf(\"Enter distance\\n\");\n
        \t\t// স্ট্রাকচার ভ্যারিয়েবল dist এর জন্য ফুট ভ্যালু ইনপুট\n
        \t\tprintf(\"Enter feet: \");\n
        \t\tscanf(\"%d\", &amp;dist.feet);\n
        \t\t// স্ট্রাকচার ভ্যারিয়েবল dist এর জন্য  ইঞ্চি ভ্যালু ইনপুট\n
        \t\tprintf(\"Enter inch: \");\n
        \t\tscanf(\"%f\", &amp;dist.inch);\n
        \t\t//dist এর ফুট এবং ইঞ্চি ভ্যালু প্রিন্ট করা\n
        \t\tprintf(\"Feet and inch is = %d\\\'%.1f\\\"\", dist.feet, dist.inch);\n\t\t\treturn 0;\n}

    </string>
    <string name="sttext17">
        আউটপুটঃ
    </string>
    <string name="sttext18">
        \t\tEnter distance\n\t\tEnter feet: 2\n\t\tEnter inch: 4.56\n\t\tFeet and inch is = 2\'4.6\"\n
    </string>
</resources>