<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intermidiate_pointer">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-পয়েন্টার-"
            android:textAlignment="center"
            android:textColor="#dadada"
            android:textSize="25sp" />
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/pointer1"
            android:textSize="17sp" />

        <TextView
            android:padding="7dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:background="#bdc9cf"
            android:text="@string/pointer2"
            android:textSize="17sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/pointer3"
            android:textSize="17sp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/memory_cell_in_ram"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/pointer16"
            android:textSize="17sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#000000"
            android:padding="10dp">
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:paddingLeft="5dp"
                    android:text="@string/pointer4"
                    android:textColor="#13c117"
                    android:textIsSelectable="true"
                    android:textSize="17sp" />
            </HorizontalScrollView>
        </LinearLayout>
        <TextView
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:background="#bdc9cf"
            android:text="@string/pointer5"
            android:textSize="17sp" />
        <TextView
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:background="#bdc9cf"
            android:text="@string/pointer6"
            android:textSize="17sp" />
        <TextView
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:background="#bdc9cf"
            android:text="@string/pointer7"
            android:textSize="17sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/pointer8"
            android:textSize="17sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#000000"
            android:padding="10dp">
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:paddingLeft="5dp"
                    android:text="data_type *name;"
                    android:textColor="#13c117"
                    android:textIsSelectable="true"
                    android:textSize="17sp" />
            </HorizontalScrollView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/pointer9"
            android:textSize="17sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#000000"
            android:padding="10dp">
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:paddingLeft="5dp"
                    android:text="@string/pointer10"
                    android:textColor="#13c117"
                    android:textIsSelectable="true"
                    android:textSize="17sp" />
            </HorizontalScrollView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/pointer11"
            android:textSize="17sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#000000"
            android:padding="10dp">
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:paddingLeft="5dp"
                    android:text="@string/pointer12"
                    android:textColor="#13c117"
                    android:textIsSelectable="true"
                    android:textSize="17sp" />
            </HorizontalScrollView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/pointer13"
            android:textSize="17sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-নাল পয়েন্টার-"
                android:textAlignment="center"
                android:textColor="#dadada"
                android:textSize="25sp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="@string/pointer14"
            android:textSize="17sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#000000"
            android:padding="10dp">
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:paddingLeft="5dp"
                    android:text="@string/pointer15"
                    android:textColor="#13c117"
                    android:textIsSelectable="true"
                    android:textSize="17sp" />
            </HorizontalScrollView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="monospace"
            android:text="কোডটা রান করে আউটপুট দেখো"
            android:textSize="17sp" />
    </LinearLayout>
    </ScrollView>
</FrameLayout>